--- a/festival/.project
+++ b/festival/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>First project</name>
+	<name>festival</name>
 	<comment></comment>
 	<projects>
 	</projects>
