--- a/yasmin-xworkz/pom.xml
+++ b/yasmin-xworkz/pom.xml
@@ -12,6 +12,8 @@
   <hibernate.version>5.6.15.Final</hibernate.version>
   <mysql.version>8.0.32</mysql.version>
     <servlet.version>2.5 </servlet.version>
+    <jcl.slf4j.version>1.7.12</jcl.slf4j.version>
+		<logback.version>1.1.3</logback.version>
   </properties>
    <dependencies>
   
@@ -66,6 +68,20 @@
     <version>${servlet.version}</version>
     <scope>provided</scope>
 </dependency>
+
+<!-- 2. Bridge logging from JCL to SLF4j -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+			<version>${jcl.slf4j.version}</version>
+		</dependency>
+
+		<!-- 3. logback -->
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${logback.version}</version>
+		</dependency>
   </dependencies>
   <build>
     <plugins>
