--- a/xworkz-yasmin-cm/pom.xml
+++ b/xworkz-yasmin-cm/pom.xml
@@ -15,7 +15,7 @@
     <jcl.slf4j.version>1.7.12</jcl.slf4j.version>
 		<logback.version>1.1.3</logback.version>
 		<jackson.library>2.12.5</jackson.library>
-		<mail.version>1.4.7</mail.version>
+		
   </properties>
    <dependencies>
   
@@ -89,12 +89,15 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>${jackson.library}</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
+		
+<!-- https://mvnrepository.com/artifact/com.sun.mail/javax.mail -->
 <dependency>
-    <groupId>javax.mail</groupId>
-    <artifactId>mail</artifactId>
-    <version>${mail.version}</version>
-</dependency>
+   
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
+		</dependency>
+
 		
 		
   </dependencies>
