--- a/xworkz-yasmin-cm/pom.xml
+++ b/xworkz-yasmin-cm/pom.xml
@@ -15,6 +15,7 @@
     <jcl.slf4j.version>1.7.12</jcl.slf4j.version>
 		<logback.version>1.1.3</logback.version>
 		<jackson.library>2.12.5</jackson.library>
+		<password.version>5.8.2</password.version>
 		
   </properties>
    <dependencies>
@@ -90,6 +91,25 @@
 			<version>${jackson.library}</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-core -->
+<dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-core</artifactId>
+    <version>2.0.2</version>
+</dependency>
+
+<dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-web</artifactId>
+    <version>5.7.2</version>
+</dependency>
+	
+	<dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-crypto</artifactId>
+    <version>${password.version}</version>
+</dependency>	
+		
 <!-- https://mvnrepository.com/artifact/com.sun.mail/javax.mail -->
 <dependency>
    
@@ -98,7 +118,11 @@
 			<version>1.4.7</version>
 		</dependency>
 
-		
+		<dependency>  
+        <groupId>org.passay</groupId>  
+        <artifactId>passay</artifactId>  
+        <version>1.3.1</version>  
+</dependency>  
 		
   </dependencies>
   <build>
